Error/Interface/Example/Pods/Target Support Files/Pods-TuringErrorInterface_Example/Pods-TuringErrorInterface_Example.modulemap
framework module Pods_TuringErrorInterface_Example {
  umbrella header "Pods-TuringErrorInterface_Example-umbrella.h"

  export *
  module * { export * }
}
